--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f prod_req.txt ]; then pip install -r prod_req.txt; fi
-    - name: Test with pytest
+    - name: Build html
       run: |
         python build.py
