--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,5 +25,6 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f prod_req.txt ]; then pip install -r prod_req.txt; fi
     - name: Build html
+      uses: rei-smz/rei-smz.github.io@master
       run: |
         python build.py
