--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,40 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        cd ./Maverick
         python -m pip install --upgrade pip
-        if [ -f prod_req.txt ]; then pip install -r prod_req.txt; fi
-    - name: Build html
+        pip install -r prod_req.txt
+    # Get build cache
+    - uses: actions/checkout@v2
+      with:
+        ref: 'cache'
+        path: './build_cache'
+
+    - name: Build site
       run: |
-        python build.py
+        # 复用图片解析缓存
+        mkdir ./Maverick/cached_imgs
+        cp ./build_cache/sizeinfo.json ./Maverick/cached_imgs
+        rm -rf ./build_cache/.git
+        cd ./Maverick
+        python ./build.py -c "../conf.py"
+        # 保存图片缓存
+        cd ..
+        cp ./Maverick/cached_imgs/sizeinfo.json ./build_cache
+    - name: Deploy to GitHub Pages
+      uses: docker://peaceiris/gh-pages:v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: ./dist
+      with:
+        emptyCommits: false
+
+    - name: Save build cache
+      uses: docker://peaceiris/gh-pages:v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: cache
+        PUBLISH_DIR: ./build_cache
+      with:
+        emptyCommits: false
