--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.5
+    - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
-        python-version: 3.5
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       env:
-        site_prefix: /Maverick/
+        site_prefix: /
       run: |
         make site
 
